--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -667,7 +667,7 @@ footer {
 	}
 
 	// URL SHORTNER
-	.url-short .url-shortner {
+	.url-short .form .url-shortner {
 		background: url(\images\bg-shorten-mobile.svg);
 		background-color: $primary-col-2;
 		background-position: center;
