--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -279,7 +279,7 @@ header {
 			position: relative;
 			border-radius: 10px;
 			padding: 5%;
-			background: url(\images\bg-shorten-desktop.svg);
+			background: url(../images/bg-shorten-desktop.svg);
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: cover;
@@ -452,7 +452,7 @@ header {
 .boost-links {
 	text-align: center;
 	height: 250px;
-	background: url(\images\bg-boost-desktop.svg);
+	background: url(../images/bg-boost-desktop.svg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -463,7 +463,7 @@ header {
 	align-items: center;
 	flex-direction: column;
 	@media screen and (max-width: 769px) {
-		background: url(\images\bg-boost-mobile.svg);
+		background: url(../images/bg-boost-mobile.svg);
 		background-color: $primary-col-2;
 		background-position: center;
 		background-repeat: no-repeat;
@@ -668,7 +668,7 @@ footer {
 
 	// URL SHORTNER
 	.url-short .form .url-shortner {
-		background: url(\images\bg-shorten-mobile.svg);
+		background: url(../images/bg-shorten-mobile.svg);
 		background-color: $primary-col-2;
 		background-position: center;
 		background-repeat: no-repeat;
